# Chords-LSL-Visualizer

./: README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  version.json
.github/workflows/: build.yml
scripts/: sync-version.cjs  types.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/app/: Canvas.tsx  Connection.tsx  Navbar.tsx  filters.tsx  layout.tsx  main.tsx  not-found.tsx  page.tsx
src/app/Theming/: mode-toggle.tsx
src/app/ui/: button.tsx
